--- a/client/public/index.html
+++ b/client/public/index.html
@@ -9,7 +9,8 @@
       name="description"
       content="Web site created using create-react-app"
     />
-    <link rel='icon' href="../src/images/logo.png">
+    <!-- <link rel='icon' href="../src/images/logo.png"> -->
+    <link rel="shortcut icon" type="image/x-icon" href="favicon.ico" />
     <!-- <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" /> -->
     <!--
       manifest.json provides metadata used when your web app is installed on a
