fixed a few minuite bugs

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -11,6 +11,10 @@
     />
     <!-- <link rel='icon' href="../src/images/logo.png"> -->
     <link rel="shortcut icon" type="image/x-icon" href="favicon.ico" />
+    <link
+      rel="stylesheet"
+      href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css"
+    />
     <!-- <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" /> -->
     <!--
       manifest.json provides metadata used when your web app is installed on a
